[package]
name = "beam-sel"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
clap = { version = "4.4", features = ["derive", "env"] }
once_cell = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
beam-lib = { git = "https://github.com/samply/beam", branch = "develop", features = ["http-util", "sockets"] }
hyper = { version = "1.1", features = ["client"] }
